--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-email/components": "^0.5.7",
+    "bcrypt": "^6.0.0",
+    "mongoose": "^8.19.2",
+    "next": "16.0.0",
+    "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "resend": "^6.3.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0"
+    "eslint-config-next": "16.0.0",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
