--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.44",
+    "@ai-sdk/openai": "^2.0.77",
+    "@ai-sdk/react": "^2.0.106",
     "@react-email/components": "^0.5.7",
+    "ai": "^5.0.106",
     "bcrypt": "^6.0.0",
     "mongoose": "^8.19.2",
     "next": "16.0.0",
     "next-auth": "^4.24.13",
+    "openai": "^6.9.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "resend": "^6.3.0",
